--- a/my-app-front/src/pages/list/index.scss
+++ b/my-app-front/src/pages/list/index.scss
@@ -37,6 +37,7 @@
         right:0.55rem;
         top:50%;
         transform: translateY(-50%);
+        color:#fff
     }
 }
 .page-list .category-list{
